# img-to-base64

./: .gitignore  img-b64.py  mkdir  pyproject.toml  style.css
img_to_base64/: __init__.py  img_b64.py
img_to_base64/routes/: views.py
img_to_base64/templates/: base.html  home.html
